# lib_py_sound_processing

./: README.md  requirements.txt  setup.cfg
src/auditory_toolkit/: __init__.py
src/auditory_toolkit/casa/: cochleagram.py  correlogram.py  plotting.py
src/auditory_toolkit/filterbanks/: time_frequency.py
tests/demo/face_subscriber/: main.py  requirements.py
tests/demo/face_subscriber/images/: __init__.py
tests/demos/: high_amplitudes_reaction.py
