[metadata]
name = auditory_toolkit
author = Nikita Mortuzaiev
author_email = nikita.mortuzayev@gmail.com
version = attr: auditory_toolkit.__version__
url = https://github.com/Zakhar-the-Robot/lib_py_sound_processing
description = Python package used by the Zakhar project (github.com/Zakhar-the-Robot). The package contains some tools for the robot hearing.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = robot, auditory, tools, hearing, sound
license = MIT
license_file = LICENSE
requires_dist = setuptools
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Framework :: Robot Framework :: Library

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    brian2>=2.5.1
    brian2hears>=0.9.2
    pillow
    samplerate
    brain_pycore

[options.package_data]
* = README.md

[options.extras_require]
dev =
    setupext-janitor
    black

[options.packages.find]
where = src
